add progress bar

--- a/src/docs/pug/index.pug
+++ b/src/docs/pug/index.pug
@@ -41,7 +41,8 @@ html(lang="en")
                         include blocks/_pagination
                     +section("User profile card")
                         include blocks/_profile
-
+                    +section("Progress bar")
+                        include blocks/_progress
 
 
 
