--- a/src/docs/pug/blocks/_count-bubble.pug
+++ b/src/docs/pug/blocks/_count-bubble.pug
@@ -1,10 +1,17 @@
-div(style="display: flex; justify-content: center;")
-    div(style="position: relative; margin: 2rem;")
-        img(src="//unsplash.it/g/300/300?image=1062")
-        .count-bubble.count-bubble--faded 0
-    div(style="position: relative; margin: 2rem;")
-        img(src="//unsplash.it/g/300/300?image=1041")
-        .count-bubble 5
-    div(style="position: relative; margin: 2rem;")
-        img(src="//unsplash.it/g/300/300?image=1000")
-        .count-bubble 999+
+.g(style="max-width: 900px")
+    .g__r
+        
+        .g__c.g__c--lg-4
+            .ks__image
+                img(src="//unsplash.it/800/500?image=1062")
+                .count-bubble.count-bubble--faded 0
+
+        .g__c.g__c--lg-4
+            .ks__image
+                img(src="//unsplash.it/800/500?image=1041")
+                .count-bubble 5
+
+        .g__c.g__c--lg-4
+            .ks__image
+                img(src="//unsplash.it/800/500?image=1000")
+                .count-bubble 999+
