--- a/src/docs/pug/blocks/_progress.pug
+++ b/src/docs/pug/blocks/_progress.pug
@@ -1,15 +1,15 @@
-.g(style="max-width: 600px")
+.g(style="max-width: 900px")
     .g__r
         
-        .g__c.g__c--sm-6
+        .g__c.g__c--lg-6
             h3 Loading…
-            .ks__loading
+            .ks__image
                 img(src="https://unsplash.it/800/500/?image=1084")
                 .progress-bar#loading
                     
-        .g__c.g__c--sm-6
+        .g__c.g__c--lg-6
             h3 Infinite
-            .ks__loading
+            .ks__image
                 img(src="https://unsplash.it/800/500/?image=1072")
                 .progress-bar.progress-bar--infinite
                     
