--- a/src/sass/vzlab-style/mixins/_grid.scss
+++ b/src/sass/vzlab-style/mixins/_grid.scss
@@ -58,6 +58,8 @@
     // columns
 
     #{$col-selector} {
+        width: 100%;
+
         @each $breakpoint in map-keys($breakpoints) {
             @include media-breakpoint-up($breakpoint) {
                 margin-left: (map-get($gutters, $breakpoint) / 2);
@@ -85,10 +87,16 @@
 
         // flex
         &--expand {
-            flex: 1 0 auto;
+            width: auto;
+            flex-grow: 1;
+            flex-shrink: 0;
+            flex-basis: 1;
         }
         &--shrink {
-            flex: 0 0 auto;
+            width: auto;
+            flex-grow: 0;
+            flex-shrink: 0;
+            flex-grow: 0;
         }
     }
 }
