add responsive utils

--- a/src/docs/pug/index.pug
+++ b/src/docs/pug/index.pug
@@ -42,7 +42,7 @@ html(lang="en")
                     +section("User profile card")
                         include blocks/_profile
                     +section("Progress bar")
-                        include blocks/_progress
+                        include blocks/_progress-bar
 
 
 
