--- a/src/sass/vzlab-style/blocks/_navbar.scss
+++ b/src/sass/vzlab-style/blocks/_navbar.scss
@@ -5,6 +5,7 @@
     color: $navbar-color;
     background: $navbar-background;
     font-size: 85%;
+    overflow: hidden; // FIXME make me work on mobile.
 }
 
 .navbar__content {
