--- a/src/docs/pug/blocks/_buttons.pug
+++ b/src/docs/pug/blocks/_buttons.pug
@@ -30,6 +30,14 @@ div
 
 h3 Squares
 div
+    button.button.button--square.button--large ⌘
+    button.button.button--square.button--large.button--primary ⌘
+    button.button.button--square.button--large.button--secondary ⌘
+    button.button.button--square.button--large.button--yes ⌘
+    button.button.button--square.button--large.button--no ⌘
+    button.button.button--square.button--large.button--danger ⌘
+    button.button.button--square.button--large.button--link ⌘
+    br
     button.button.button--square ⇪
     button.button.button--square.button--primary ⇪
     button.button.button--square.button--secondary ⇪
