--- a/src/sass/vzlab-style/blocks/_button.scss
+++ b/src/sass/vzlab-style/blocks/_button.scss
@@ -37,6 +37,13 @@
     background: none;
     color: inherit;
 }
+.button--large {
+    padding-left: 6rem;
+    padding-right: 6rem;
+    height: 4rem;
+    font-size: 1.2rem;
+    &.button--square { width: 4rem }
+}
 .button--small {
     line-height: 2rem;
     padding: .25rem 1rem;
