--- a/src/sass/vzlab-style/kitchen-sink.scss
+++ b/src/sass/vzlab-style/kitchen-sink.scss
@@ -6,6 +6,14 @@
     padding: 2rem 0;
     border-bottom: .125rem solid rgba(255, 255, 255, .05);
 }
+.ks__section--tall .ks__content {
+    // background: teal;
+    min-height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
+}
 .ks__header {
     font-size: 2.5rem;
     margin-bottom: 8rem;
