--- a/src/sass/vzlab-style/main.scss
+++ b/src/sass/vzlab-style/main.scss
@@ -30,6 +30,9 @@ label {
 picture {
     position: relative;
 }
+h1, h2, h3, h4, h5 {
+    font-weight: 200;
+}
 [tabindex]:not([readonly]):not([disabled]) {
     cursor: pointer;
 }
