--- a/src/sass/vzlab-style/_position.scss
+++ b/src/sass/vzlab-style/_position.scss
@@ -18,9 +18,16 @@
             text-align: center;
         }
 
+        // flex
         #{".flex-center" + $suffix} {
             display: flex;
             align-items: center;
+            justify-content: center;
+        }
+        #{".flex-center-vertical" + $suffix} {
+            display: flex;
+            flex-direction: column;
+            align-items: stretch;
             justify-content: center;
         }
     }
