--- a/src/sass/vzlab-style/_variables.scss
+++ b/src/sass/vzlab-style/_variables.scss
@@ -243,9 +243,9 @@ $spinner-color: $pink !default;
 // Spinner
 // -----------------------------------------------------------------------------
 
-$jumbotron-margin: 2rem !default;
-$jumbotron-margin-standalone: 4rem 2rem !default;
-$jumbotron-margin-standalone-large: 8rem 4rem !default;
+$jumbotron-margin: 2rem 0 !default;
+$jumbotron-margin-standalone: 4rem 0 !default;
+$jumbotron-margin-standalone-large: 8rem 0 !default;
 $jumbotron-padding: 2rem !default;
 $jumbotron-padding-large: 4rem !default;
 $jumbotron-border: none !default;
