--- a/src/sass/vzlab-style/blocks/_jumbotron.scss
+++ b/src/sass/vzlab-style/blocks/_jumbotron.scss
@@ -6,19 +6,14 @@
     @include clearfix;
 
     margin: $jumbotron-margin;
-    padding: $jumbotron-padding;
     border: $jumbotron-border;
     background: $jumbotron-background;
     color: $jumbotron-text;
-
     box-shadow: 0 2rem 5rem rgba($black, .1),
                 0 2rem 1rem -1rem rgba($black, .1);
 
-    :first-child {
-        margin-top: 0;
-    }
-    :last-child {
-        margin-bottom: 0;
+    h1 {
+        font-size: 2.4em;
     }
 
     &--standalone {
@@ -29,22 +24,16 @@
 .jumbotron__title,
 .jumbotron__content,
 .jumbotron__actions {
-    margin-bottom: $jumbotron-padding;
-    margin-top: $jumbotron-padding;
-}
-.jumbotron__title h1 {
-    font-size: 3rem;
-}
-.jumbotron__actions {
-    @extend .text-end;
+    margin: $jumbotron-padding;
+    &--gapless {
+        margin: 0;
+    }
 }
 
 // responsivity
 @include media-breakpoint-up(md) {
     .jumbotron {
-        padding: $jumbotron-padding-large;
         font-size: 1.2rem;
-
         &--standalone {
             margin: $jumbotron-margin-standalone-large;
         }
@@ -52,10 +41,6 @@
     .jumbotron__title,
     .jumbotron__content,
     .jumbotron__actions {
-        margin-bottom: $jumbotron-padding-large;
-        margin-top: $jumbotron-padding-large;
-    }
-    .jumbotron__title h1 {
-        font-size: 6rem;
+        margin: $jumbotron-padding-large;
     }
 }
