--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -137,30 +137,15 @@
   text-align: center; }
 
 .flex-center {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center; }
+  align-items: center;
+  justify-content: center; }
 
 .flex-center-vertical {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center; }
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: center; }
 
 @media (min-width: 576px) {
   .text-start--sm {
@@ -174,29 +159,14 @@
   .text-center--sm {
     text-align: center; }
   .flex-center--sm {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
+    align-items: center;
+    justify-content: center; }
   .flex-center-vertical--sm {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: stretch;
-        -ms-flex-align: stretch;
-            align-items: stretch;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; } }
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: center; } }
 
 @media (min-width: 768px) {
   .text-start--md {
@@ -210,29 +180,14 @@
   .text-center--md {
     text-align: center; }
   .flex-center--md {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
+    align-items: center;
+    justify-content: center; }
   .flex-center-vertical--md {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: stretch;
-        -ms-flex-align: stretch;
-            align-items: stretch;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; } }
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: center; } }
 
 @media (min-width: 992px) {
   .text-start--lg {
@@ -246,29 +201,14 @@
   .text-center--lg {
     text-align: center; }
   .flex-center--lg {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
+    align-items: center;
+    justify-content: center; }
   .flex-center-vertical--lg {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: stretch;
-        -ms-flex-align: stretch;
-            align-items: stretch;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; } }
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: center; } }
 
 @media (min-width: 1200px) {
   .text-start--xl {
@@ -282,29 +222,14 @@
   .text-center--xl {
     text-align: center; }
   .flex-center--xl {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
+    align-items: center;
+    justify-content: center; }
   .flex-center-vertical--xl {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: stretch;
-        -ms-flex-align: stretch;
-            align-items: stretch;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; } }
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: center; } }
 
 @media (min-width: 1440px) {
   .text-start--max {
@@ -318,29 +243,14 @@
   .text-center--max {
     text-align: center; }
   .flex-center--max {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
+    align-items: center;
+    justify-content: center; }
   .flex-center-vertical--max {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: stretch;
-        -ms-flex-align: stretch;
-            align-items: stretch;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; } }
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: center; } }
 
 :root {
   font: 16px/1.414 "Titillium Web", sans-serif;
@@ -390,6 +300,10 @@ h1, h2, h3, h4, h5 {
   color: inherit;
   opacity: .25; }
 
+::-ms-input-placeholder {
+  color: inherit;
+  opacity: .25; }
+
 ::placeholder {
   color: inherit;
   opacity: .25; }
@@ -409,6 +323,12 @@ h1, h2, h3, h4, h5 {
   cursor: -webkit-grabbing;
   cursor: grabbing; }
 
+.actions {
+  border-top: medium solid #606060;
+  margin: 1rem 0 2rem;
+  padding-top: 1rem;
+  text-align: end; }
+
 .actions-card {
   max-width: 30rem;
   max-width: 40rem;
@@ -426,12 +346,6 @@ h1, h2, h3, h4, h5 {
 .actions-card__content {
   margin-bottom: 2rem; }
 
-.actions {
-  border-top: medium solid #606060;
-  margin: 1rem 0 2rem;
-  padding-top: 1rem;
-  text-align: end; }
-
 .button, .pagination__button {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -446,9 +360,7 @@ h1, h2, h3, h4, h5 {
   background: none;
   background: none;
   vertical-align: middle;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   cursor: pointer;
   text-align: center;
   margin-bottom: .5rem;
@@ -463,7 +375,7 @@ h1, h2, h3, h4, h5 {
   .button:not(.button--link), .pagination__button:not(.button--link) {
     text-transform: uppercase;
     letter-spacing: .066em; }
-  .button[disabled], [disabled].pagination__button {
+  .button[disabled], .pagination__button[disabled] {
     cursor: not-allowed; }
   .button.button--square, .button--square.pagination__button {
     width: 3rem; }
@@ -762,27 +674,16 @@ h1, h2, h3, h4, h5 {
   margin: 2rem 0 -2rem; }
 
 .f {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex; }
 
 .f--column {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column; }
+  flex-direction: column; }
   .f--column.f--top {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start; }
+    justify-content: flex-start; }
   .f--column.f--middle {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
+    justify-content: center; }
   .f--column.f--bottom {
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end; }
+    justify-content: flex-end; }
 
 .form--inline {
   display: inline; }
@@ -863,11 +764,8 @@ h1, h2, h3, h4, h5 {
       padding-left: 1rem;
       padding-right: 1rem; } }
   .g__r {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     margin-left: -0.5rem;
     margin-right: -0.5rem; }
     @media (min-width: 576px) {
@@ -891,70 +789,34 @@ h1, h2, h3, h4, h5 {
         margin-left: -0.5rem;
         margin-right: -0.5rem; } }
     .g__r--column {
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: column;
-              flex-direction: column; }
+      flex-direction: column; }
     .g__r--row {
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: row;
-              flex-direction: row; }
+      flex-direction: row; }
     @media (min-width: 576px) {
       .g__r--sm-column {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column; }
+        flex-direction: column; }
       .g__r--sm-row {
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: row;
-                flex-direction: row; } }
+        flex-direction: row; } }
     @media (min-width: 768px) {
       .g__r--md-column {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column; }
+        flex-direction: column; }
       .g__r--md-row {
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: row;
-                flex-direction: row; } }
+        flex-direction: row; } }
     @media (min-width: 992px) {
       .g__r--lg-column {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column; }
+        flex-direction: column; }
       .g__r--lg-row {
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: row;
-                flex-direction: row; } }
+        flex-direction: row; } }
     @media (min-width: 1200px) {
       .g__r--xl-column {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column; }
+        flex-direction: column; }
       .g__r--xl-row {
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: row;
-                flex-direction: row; } }
+        flex-direction: row; } }
     @media (min-width: 1440px) {
       .g__r--max-column {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column; }
+        flex-direction: column; }
       .g__r--max-row {
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: row;
-                flex-direction: row; } }
+        flex-direction: row; } }
   .g__c {
     width: 100%;
     margin-left: 0.5rem;
@@ -1282,20 +1144,13 @@ h1, h2, h3, h4, h5 {
       margin-left: auto; }
     .g__c--expand {
       width: auto;
-      -webkit-box-flex: 1;
-          -ms-flex-positive: 1;
-              flex-grow: 1;
-      -ms-flex-negative: 0;
-          flex-shrink: 0;
-      -ms-flex-preferred-size: 1;
-          flex-basis: 1; }
+      flex-grow: 1;
+      flex-shrink: 0;
+      flex-basis: 1; }
     .g__c--shrink {
       width: auto;
-      -webkit-box-flex: 0;
-          -ms-flex-positive: 0;
-              flex-grow: 0;
-      -ms-flex-negative: 0;
-          flex-shrink: 0;
+      flex-grow: 0;
+      flex-shrink: 0;
       flex-grow: 0; }
 
 .grid {
@@ -1325,11 +1180,8 @@ h1, h2, h3, h4, h5 {
       padding-left: 1rem;
       padding-right: 1rem; } }
   .grid__row {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     margin-left: -0.5rem;
     margin-right: -0.5rem; }
     @media (min-width: 576px) {
@@ -1353,70 +1205,34 @@ h1, h2, h3, h4, h5 {
         margin-left: -0.5rem;
         margin-right: -0.5rem; } }
     .grid__row--column {
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: column;
-              flex-direction: column; }
+      flex-direction: column; }
     .grid__row--row {
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: row;
-              flex-direction: row; }
+      flex-direction: row; }
     @media (min-width: 576px) {
       .grid__row--sm-column {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column; }
+        flex-direction: column; }
       .grid__row--sm-row {
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: row;
-                flex-direction: row; } }
+        flex-direction: row; } }
     @media (min-width: 768px) {
       .grid__row--md-column {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column; }
+        flex-direction: column; }
       .grid__row--md-row {
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: row;
-                flex-direction: row; } }
+        flex-direction: row; } }
     @media (min-width: 992px) {
       .grid__row--lg-column {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column; }
+        flex-direction: column; }
       .grid__row--lg-row {
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: row;
-                flex-direction: row; } }
+        flex-direction: row; } }
     @media (min-width: 1200px) {
       .grid__row--xl-column {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column; }
+        flex-direction: column; }
       .grid__row--xl-row {
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: row;
-                flex-direction: row; } }
+        flex-direction: row; } }
     @media (min-width: 1440px) {
       .grid__row--max-column {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column; }
+        flex-direction: column; }
       .grid__row--max-row {
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: row;
-                flex-direction: row; } }
+        flex-direction: row; } }
   .grid__col {
     width: 100%;
     margin-left: 0.5rem;
@@ -1744,20 +1560,13 @@ h1, h2, h3, h4, h5 {
       margin-left: auto; }
     .grid__col--expand {
       width: auto;
-      -webkit-box-flex: 1;
-          -ms-flex-positive: 1;
-              flex-grow: 1;
-      -ms-flex-negative: 0;
-          flex-shrink: 0;
-      -ms-flex-preferred-size: 1;
-          flex-basis: 1; }
+      flex-grow: 1;
+      flex-shrink: 0;
+      flex-basis: 1; }
     .grid__col--shrink {
       width: auto;
-      -webkit-box-flex: 0;
-          -ms-flex-positive: 0;
-              flex-grow: 0;
-      -ms-flex-negative: 0;
-          flex-shrink: 0;
+      flex-grow: 0;
+      flex-shrink: 0;
       flex-grow: 0; }
 
 .jumbotron {
@@ -1795,13 +1604,8 @@ h1, h2, h3, h4, h5 {
 
 .layout {
   min-height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column; }
+  flex-direction: column; }
 
 .layout__header {
   position: fixed;
@@ -1814,22 +1618,13 @@ h1, h2, h3, h4, h5 {
 .layout__body {
   margin-top: 60px;
   height: 100%;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex: 1;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column; }
+  flex-direction: column; }
 
 .layout__content {
   margin: 4rem 0 2rem;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 auto;
-          flex: 1 0 auto; }
+  flex: 1 0 auto; }
 
 .layout__post-content {
   position: -webkit-sticky;
@@ -1844,20 +1639,12 @@ h1, h2, h3, h4, h5 {
 
 .navbar__content {
   height: 60px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center; }
+  align-items: center; }
   .navbar__content > * {
     height: 100%;
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
     display: inline-flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center; }
+    align-items: center; }
   .navbar__content > * {
     padding: 0 1.5rem; }
   .navbar__content > a {
@@ -1875,12 +1662,8 @@ h1, h2, h3, h4, h5 {
   margin: 2rem 0; }
 
 .pagination__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center; }
+  justify-content: center; }
 
 .pagination__button {
   color: #fff;
@@ -1918,17 +1701,13 @@ h1, h2, h3, h4, h5 {
     background: #606060; }
 
 .profile__card {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   overflow: hidden;
   padding: 0 1rem;
   height: 100%; }
 
 .profile__avatar {
-  -webkit-box-flex: 0;
-      -ms-flex: 0;
-          flex: 0;
+  flex: 0;
   margin-left: 5px; }
   .profile__avatar img {
     display: block;
@@ -1944,19 +1723,11 @@ h1, h2, h3, h4, h5 {
     transition: 250ms filter, 250ms -webkit-filter; }
 
 .profile__name {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
   padding: 0 1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   font-weight: bolder; }
 
 .profile__hover-card {
