--- a/src/styles/blocks/container.styl
+++ b/src/styles/blocks/container.styl
@@ -10,6 +10,6 @@ $container-width-narrow ?= 30rem;
 .vz-container--narrow {
   max-width: $container-width-narrow;
 }
-.vz-container--fluid {
-  max-width: 100%;
-}
+.vz-container--fluid
+  max-width: 100%
+
