Layout grid setup.

--- a/src/styles/blocks/container.styl
+++ b/src/styles/blocks/container.styl
@@ -7,9 +7,11 @@ $container-width-narrow ?= 30rem;
   margin: 0 auto;
   max-width: $container-width;
 }
+
 .vz-container--narrow {
   max-width: $container-width-narrow;
 }
-.vz-container--fluid
-  max-width: 100%
 
+.vz-container--fluid {
+  max-width: 100%
+}
