--- a/src/styles/blocks/layout.styl
+++ b/src/styles/blocks/layout.styl
@@ -1,3 +1,21 @@
 .vz-layout {
-  background-color: gold;
+  grid-template-areas: "aside content";
+  grid-template-columns: 288px auto;
+  background-color: #f5f5f5;
+  display: grid;
+  height: 100vh;
+  width: 100vw;
+}
+
+.vz-layout__aside {
+  background-color: white;
+  grid-area: aside;
+}
+
+.vz-layout__content {
+  grid-template-rows: 64px;
+  grid-auto-rows: auto;
+  grid-area: content;
+  margin: 0 auto;
+  display: grid;
 }
