--- a/src/styles/blocks/layout.styl
+++ b/src/styles/blocks/layout.styl
@@ -1,6 +1,9 @@
+@require 'fonts';
+
 .vz-layout {
   grid-template-areas: "aside content";
   grid-template-columns: 288px auto;
+  font-family: 'Titillium Web';
   background-color: #f5f5f5;
   display: grid;
   height: 100vh;
@@ -13,8 +16,6 @@
 }
 
 .vz-layout__content {
-  grid-template-rows: 64px;
-  grid-auto-rows: auto;
   grid-area: content;
   margin: 0 auto;
   display: grid;
