--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,11 +1,13 @@
 html {
   box-sizing: border-box;
+  height: 100%;
 }
 * {
   box-sizing: inherit;
 }
 body {
   margin: 0;
+  height: 100%;
 }
 
 @import "blocks/*";
