--- a/src/styles/blocks/layout.styl
+++ b/src/styles/blocks/layout.styl
@@ -1,5 +1,4 @@
 .vz-layout {
-  background-color: gold;
   height: 100%;
   display: grid;
   grid-template-columns: 18rem 1fr;
@@ -11,14 +10,18 @@
 
 .vz-layout__brand {
   grid-area: brand;
+  background-color: black;
+  color: white;
 }
 
 .vz-layout__breadcrumbs {
   grid-area: breadcrumbs;
+  background-color: lead;
 }
 
 .vz-layout__content {
   grid-area: content;
+  background: whitesmoke;
 }
 
 .vz-layout__menu {
