--- a/src/styles/blocks/layout.styl
+++ b/src/styles/blocks/layout.styl
@@ -16,7 +16,12 @@
 
 .vz-layout__breadcrumbs {
   grid-area: breadcrumbs;
-  background-color: lead;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  background: linear-gradient(90deg,#333,#777);
+  color: #f5f5f5;
+  padding: 1rem 2rem;
 }
 
 .vz-layout__content {
