--- a/src/styles/blocks/sidebar.styl
+++ b/src/styles/blocks/sidebar.styl
@@ -1,9 +1,14 @@
 .vz-sidebar {
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
 }
 
 .vz-sidebar__options {
+  flex: 1 0 auto;
 }
 
 .vz-sidebar__user {
+  flex: 0 0 auto;
 }
 
