--- a/src/styles/blocks/breadcrumbs.styl
+++ b/src/styles/blocks/breadcrumbs.styl
@@ -1,26 +1,26 @@
+@require "lib/text";
+@require "variables";
+
+
 .vz-breadcrumbs {
-  text-transform: uppercase;
-  letter-spacing: .5em;
-  font-size: 87.5%;
+  wide-text();
 }
 
 .vz-breadcrumbs__item {
   display: inline-block;
 
   a {
-    color: inherit;
-    text-decoration: inherit;
-    border: none;
+    unlink();
+
+    &:focus, &:hover {
+      background: $accent;
+    }
   }
 
-
+  // add a trailing '/' to every item, except for the last one
   &:not(:last-child):after {
     content: "/";
     padding: 0 1rem;
     opacity: .5;
-  }
-
-  a:focus, a:hover {
-    background: orange;
   }
 }
