--- a/src/styles/lib/text.styl
+++ b/src/styles/lib/text.styl
@@ -6,7 +6,14 @@ unlink() {
 
 wide-text() {
   text-transform: uppercase;
-  letter-spacing: .5em;
+  letter-spacing: .5rem;
   font-size: 87.5%;
 }
 
+.vz-page__header {
+  wide-text();
+  margin-bottom: 3rem;
+  font-style: italic;
+  font-size: 2.5rem;
+  font-weight: 500;
+}
