--- a/src/styles/blocks/table.styl
+++ b/src/styles/blocks/table.styl
@@ -3,37 +3,62 @@
   margin: 0 auto 2rem auto;
   text-align: left;
   width: 100%;
-}
 
-.vz-table--frame {
-  thead {
+    thead {
     font-size: 87.5%;
   }
 
-  tbody tr:nth-child(odd) {
+  tbody tr:nth-child(even) {
+    transition: all 0.15s ease-out;
     background-color: rgba(0, 0, 0, .05);
   }
 
-  tbody tr:nth-child(even) {
-    border-top: 1px solid rgba(0, 0, 0, .1);
-    // border-top: 1px solid rgba(0, 0, 0, .05);
+  tbody tr:nth-child(odd) {
+    transition: all 0.2s ease-out;
   }
 
   tbody tr:hover {
     background-color: rgba(0, 0, 0, .1);
+
+    .vz-table__actions a {
+      opacity: 1;
+    }
   }
 
   td, th {
     padding: .75rem 1rem;
   }
-  th {
+
+  th[scope=row] {
+    text-align: start;
+  }
+
+  th[scope=col] {
+    box-shadow: 0 1px 0 rgba(0, 0, 0, .1);;
     background-color: #f5f5f5;
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;
     position: sticky;
     top: 0;
   }
+
+  .vz-table__actions {
+    white-space: nowrap;
+  }
+
+  .vz-table__actions a {
+    transition: all 0.15s ease-out;
+    margin-right: .75rem;
+    color: #007bff;
+    opacity: 0;
+  }
+
+  .vz-table__actions a:hover {
+    color #0054af;
+  }
 }
 
-.vz-table--list {
-
+.vz-table--compact {
+  td, th {
+    padding: .25rem .5rem;
+  }
 }
