--- a/src/styles/blocks/table.styl
+++ b/src/styles/blocks/table.styl
@@ -10,7 +10,7 @@
 
   tbody tr:nth-child(even) {
     transition: all 0.15s ease-out;
-    background-color: rgba(0, 0, 0, .05);
+    background-color: rgba(black, .05);
   }
 
   tbody tr:nth-child(odd) {
@@ -18,7 +18,7 @@
   }
 
   tbody tr:hover {
-    background-color: rgba(0, 0, 0, .1);
+    background-color: rgba(black, .1);
 
     .vz-table__actions a {
       opacity: 1;
@@ -34,7 +34,7 @@
   }
 
   th[scope=col] {
-    box-shadow: 0 1px 0 rgba(0, 0, 0, .1);;
+    box-shadow: 0 1px 0 rgba(black, .1);;
     background-color: #f5f5f5;
     padding-bottom: 1rem;
     position: sticky;
