action card; Form data edit.

--- a/src/styles/blocks/buttons.styl
+++ b/src/styles/blocks/buttons.styl
@@ -29,3 +29,22 @@
 .vz-button--secondary:hover {
   background-color: rgba(black, 0.7);
 }
+
+.vz-button--no {
+  background-color $accent;
+}
+
+.vz-button--no {
+  transition: all 0.2s ease-in-out;
+  background-color $accent;
+}
+
+.vz-button--no:hover {
+  background-color #d86b43
+}
+
+.vz-button--full-width {
+  margin-bottom: .5rem;
+  display: block;
+  width: 100%;
+}
