--- a/src/styles/blocks/action-card.styl
+++ b/src/styles/blocks/action-card.styl
@@ -3,7 +3,7 @@
 .vz-action-card {
   border: 1px solid rgba(0, 0, 0, 0.06);
   background-color #fff;
-  padding: .75rem 2rem;
+  padding: 2rem 2rem;
   margin: 0 auto 2rem;
   max-width: 50rem;
   width: 100%;
@@ -18,5 +18,5 @@
 }
 
 .vz-action-card__description {
-  margin-bottom: 1.5rem;
+  margin-bottom: 2.5rem;
 }
