--- a/src/styles/blocks/form.styl
+++ b/src/styles/blocks/form.styl
@@ -20,7 +20,11 @@ input::placeholder {
   font-size: 1rem;
   color: $black;
 }
-
 .is-invalid {
   border: 1px solid coral;
+}
+
+.vz-form-control__error-msg {
+  font-size: 87.5%;
+  color: $accent;
 }
