--- a/src/styles/blocks/flashes.styl
+++ b/src/styles/blocks/flashes.styl
@@ -25,8 +25,8 @@
 .vz-flash-container__flash {
   border: 1px solid rgba(black, 0.05);
   background-color $white;
-  padding-left: 1rem;
   align-items: center;
+  padding-left: 1rem;
   display: flex;
   height: 30px;
   width: 100%;
@@ -37,17 +37,17 @@
 }
 
 .vz-flash-container__indicator--ok {
-  background-color #07be8c;
+  background-color: $yes;
 }
 
 .vz-flash-container__indicator--wrong {
-  background-color $accent;
+  background-color: $no;
 }
 
 .vz-flash-container__indicator--warning {
-  background-color gold;
+  background-color: $warning;
 }
 
 .vz-flash-container__indicator--info {
-  background-color lightblue;
+  background-color: $info;
 }
