--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -6,10 +6,10 @@ $off-white = GAINSBORO;
 $grey = #dee2e6;
 
 $accent = CORAL;
-$primary = $accent;
-// $yes
-// $no
-// $danger
-// $info
-// $warning
-// $success
+$primary = #007bff;
+$yes = #07be8c;
+$warning = GOLD;
+$info = LIGHTBLUE;
+$success = $yes;
+$no = $accent;
+$danger = CRIMSON;
